# djpdf

./: .gitignore  README.md  meson.build  setup.py
desktop/: com.github.unrud.djpdf.appdata.xml  com.github.unrud.djpdf.desktop  com.github.unrud.djpdf.desktop.in  com.github.unrud.djpdf.metainfo-releases.xml.in  com.github.unrud.djpdf.metainfo.xml  com.github.unrud.djpdf.metainfo.xml.in  meson.build  scans2pdf.appdata.xml  scans2pdf.desktop
djpdf/: __main__.py  djpdf.py  hocr.py  scans2pdf.py  scans2pdfcli.py  to-unicode.cmap  util.py
djpdfgui/: __main__.py  scans2pdfgui.py
djpdfgui/qml/: detail.qml  main.qml  overview.qml
flatpak/: com.github.unrud.djpdf.json  com.github.unrud.djpdf.yaml  ocr-extension-info.txt  ocr-extension-language.metainfo.xml.in  ocr-extension-script.metainfo.xml.in  ocr-extension-special.metainfo.xml.in  ocr-extension.metainfo.xml.in  ocr-extensions-generator.py  ocr-extensions-installer.py  ocr-extensions.json  tesseract-wrapper.py
po/: LINGUAS  POTFILES  cs.po  de.po  djpdfgui.pot  es.po  et.po  hr.po  hu.po  id.po  it.po  kab.po  meson.build  nb.po  nb_NO.po  nl.po  oc.po  ota.po  ru.po  sk.po  ta.po  tr.po  uk.po
scans2pdf_gui/: main.py  meson.build  scans2pdf-gui.in
scans2pdf_gui/qml/: detail.qml  main.qml  meson.build  overview.qml
snap/: snapcraft.yaml
